<resources>
    <string name="app_name">SimpleApp</string>
    <string name="title_activity_main_nav">MainNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="v1_1_1">v1.1.1</string>
    <string name="login_untuk_melanjutkan">Login untuk melanjutkan</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="slogan">Permudah hidup dengan teknologi</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="lengkapi_data_untuk_melanjutkan">Lengkapi data untuk melanjutkan</string>
    <string name="informasi_user">Informasi User</string>
    <string name="nama">Nama</string>
    <string name="umur">Umur</string>
    <string name="umur_tidak_boleh_kurang_dari_18_tahun">Umur tidak boleh kurang dari 18 tahun</string>
    <string name="email_tidak_valid">Email tidak valid</string>
    <string name="password_minimal_6_karakter">Password minimal 6 karakter</string>
    <string name="password_minimal_terdapat_1_huruf_kapital">Password minimal terdapat 1 huruf kapital.</string>
    <string name="password_harus_gabungan_huruf_dan_angka">Password harus gabungan huruf dan angka.</string>
    <string name="email_tidak_terdaftar">Email tidak terdaftar</string>
    <string name="password_salah">Password salah</string>
    <string name="register_berhasil_silahkan_login">Register berhasil, Silahkan login.</string>
    <string name="email_telah_terdaftar">Email telah terdaftar</string>
</resources>